# consistent-feature-importance

./: README.md  pyproject.toml
consistent_feature_importance/: __init__.py  consistent_feature_importance.py
