[project]
name = "consistent-feature-importance"
version = "0.1.0"
description = "Rolling-window SHAP feature importance analysis for tree-based models"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "numpy>=1.26.4",
    "pandas>=1.5.0,<3.0",
    "shap>=0.45.0",
]

[project.optional-dependencies]
plot = ["plotly>=5.0.0"]
ray = ["ray>=2.0.0"]
dev = [
    "pytest>=7.4.0",
    "coverage>=7.0.0",
    "lightgbm>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
